Fix switch spacing

--- a/src/windows/Project/ProjectInfo/ProjectInfo.module.scss
+++ b/src/windows/Project/ProjectInfo/ProjectInfo.module.scss
@@ -15,7 +15,3 @@
 .formControlWrapper {
   margin-bottom: 30px;
 }
-
-.switch {
-  margin-bottom: 10px;
-}
