--- a/src/windows/Project/Tasks/TaskDialog/TaskDialog.module.scss
+++ b/src/windows/Project/Tasks/TaskDialog/TaskDialog.module.scss
@@ -1,7 +1,3 @@
 .formControlWrapper {
   margin-bottom: 30px;
 }
-
-.switch {
-  margin-bottom: 10px;
-}
